# Save-Edit-Tool

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  GEMINI.md  LICENSE  README.de.md  README.en.md  README.md  README.pt-br.md  package-lock.json  package.json
.github/: FUNDING.yml
ets2-tool/native/simnexus_sdk/: CMakeLists.txt
ets2-tool/native/simnexus_sdk/include/: simnexus_telemetry_bridge.hpp
ets2-tool/native/simnexus_sdk/src/: simnexus_sdk.cpp
ets2-tool/src-tauri/: .gitignore  2  Cargo.toml  PERFORMANCE.md  tauri.conf.json
ets2-tool/src-tauri/anchor/: trucks_data_ets2.json
ets2-tool/src-tauri/capabilities/: default.json  desktop.json
ets2-tool/src-tauri/data/: app.sqlite  mod_sandbox_presets.json
ets2-tool/src-tauri/locales/: de.json  en.json  es.json  fr.json  it.json  pl.json  pt-BR.json
ets2-tool/src-tauri/resources/plugins/: README.md
ets2-tool/src-tauri/scripts/: build_simnexus_sdk.ps1
ets2-tool/src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  settings.rs  state.rs
ets2-tool/src-tauri/src/commands/: apply_setting.rs  clone_profiles.rs  global_config.rs  mod.rs  profiles.rs  quicksave_game.rs  save_config.rs  save_editor.rs  save_reader.rs  trailers.rs  trucks.rs
ets2-tool/src-tauri/src/db/: sqlite.rs
ets2-tool/src-tauri/src/db/migrations/: 2026-04-06_add_cargo_resolution_to_ets_job_links.sql  2026-04-06_add_resolved_tokens_to_ets_job_links.sql  2026-04-06_create_ets2_datasets.sql  2026-04-06_create_ets_job_link_audit.sql  2026-04-06_create_ets_job_links.sql  2026-04-06_create_ets_profiles.sql  2026-04-06_create_ets_save_snapshot.sql  2026-04-06_create_ets_saves.sql  2026-04-06_create_vtc_job_ledger.sql  2026-04-07_add_vtc_local_persistence.sql  2026-05-06_create_ets_runtime_reports.sql  2026-05-06_create_ets_save_backups.sql  2026-05-10_add_backup_type_to_ets_save_backups.sql  2026-05-22_create_career_job_history.sql
ets2-tool/src-tauri/src/features/: mod.rs
ets2-tool/src-tauri/src/features/auth/: commands.rs  db.rs  mod.rs  models.rs  repo.rs  service.rs
ets2-tool/src-tauri/src/logs/: mod.rs
ets2-tool/src-tauri/src/models/: cached_profile.rs  clone_profiles_info.rs  global_config_info.rs  mod.rs  profile_info.rs  quicksave_game_info.rs  save_game_config.rs  save_game_data.rs  save_info.rs  trailers.rs  trucks.rs
ets2-tool/src-tauri/src/shared/: current_profile.rs  decrypt.rs  extract_save_name.rs  game_loader.rs  hex_float.rs  logs.rs  mod.rs  paths.rs  sii_parser.rs  sqlite_schema.rs  trace.rs  user_log.rs
ets2-tool/src-tauri/src/utils/: current_profile.rs  decrypt.rs  extract.rs  game_loader.rs  hex.rs  hex_float.rs  mod.rs  paths.rs  profile_clone.rs  regex_helper.rs  settings.js  sii_parser.rs
ets2-tool/src-tauri/src/xp/: command.rs  mod.rs
ets2-tool/src-tauri/test-fixtures/decrypt/: encrypted_game.sii
(+192 files in other folders)
