[package]
name = "ets2-tool"
version = "0.3.1"
description = "Save-Edit Tool for ETS2"
authors = ["xLieferant"]
edition = "2024"
license = "MIT"

[lib]
name = "ets2_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }

# Tauri Plugins
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
dirs = "6.0.0"
once_cell = "1.19"


# ETS2 / Tooling
decrypt_truck = "1.3.4"
walkdir = "2.5.0"
regex = "1.4.2"


# Utility
log = "0.4.29"
chrono = "0.4"
uuid = "1.19.0"
zip = "7.0.0"
fs_extra = "1.3.0"
